--- a/Explorations/Preprocess/Outliers/Anomaly_Analysis.ipynb
+++ b/Explorations/Preprocess/Outliers/Anomaly_Analysis.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,8 @@
     "import matplotlib.pyplot as plt\n",
     "import plotly.express as px\n",
     "import seaborn as sns\n",
-    "from sklearn.decomposition import PCA"
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -11889,7 +11890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -27838,10 +27839,6 @@
     }
    ],
    "source": [
-    "import plotly.express as px\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
     "def plot_pca_anomalies_plotly(df):\n",
     "    # Standardize the features before PCA (Col1 to Col10)\n",
     "    feature_columns = ['Col1', 'Col2', 'Col3', 'Col4', 'Col5', 'Col6', 'Col7', 'Col8', 'Col9', 'Col10']\n",
