--- a/Explorations/Selection/Model_Evaluation/Classification/Regression_Logistic_Metrics.ipynb
+++ b/Explorations/Selection/Model_Evaluation/Classification/Regression_Logistic_Metrics.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looking at Logistic Regression Metrics."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -13,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,19 +53,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# print(y_train)\n",
-    "\n",
-    "# print(X_train)"
+    "### Stats model Metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +77,7 @@
       "Model:                          Logit   Df Residuals:                      131\n",
       "Method:                           MLE   Df Model:                            2\n",
       "Date:                Mon, 17 Mar 2025   Pseudo R-squ.:                  0.8636\n",
-      "Time:                        14:21:12   Log-Likelihood:                -12.504\n",
+      "Time:                        15:02:16   Log-Likelihood:                -12.504\n",
       "converged:                       True   LL-Null:                       -91.669\n",
       "Covariance Type:            nonrobust   LLR p-value:                 4.158e-35\n",
       "==============================================================================\n",
@@ -87,8 +97,15 @@
    "source": [
     "# Fit logistic regression model\n",
     "model = sm.Logit(y_train, X_train)\n",
-    "results = model.fit()\n",
-    "\n",
+    "results = model.fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Display regression summary\n",
     "print(results.summary())"
    ]
@@ -99,10 +116,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Stats model Metrics\n",
     "# Exponentiate coefficients for interpretation\n",
     "exp_coef = np.exp(results.params)\n",
     "print(\"Exponentiated Coefficients:\", exp_coef)\n",
-    "\n",
     "# Compute training accuracy\n",
     "def compute_accuracy(actual, predicted):\n",
     "    \"\"\"\n",
@@ -116,7 +133,6 @@
     "train_predictions = results.predict()\n",
     "cm_train, accuracy_train = compute_accuracy(y_train, train_predictions)\n",
     "print(f'Training Accuracy: {accuracy_train:.2f}')\n",
-    "\n",
     "# Compute confusion matrix and accuracy for test data\n",
     "test_predictions = results.predict(X_test)\n",
     "cm_test, accuracy_test = compute_accuracy(y_test, test_predictions)\n",
@@ -125,43 +141,171 @@
     "cm_df = pd.DataFrame(cm_test, columns=['Predicted 0', 'Predicted 1'], index=['Actual 0', 'Actual 1'])\n",
     "print(\"Confusion Matrix:\")\n",
     "print(cm_df)\n",
-    "\n",
     "# Display test accuracy and misclassification rate\n",
     "print(f'Test Accuracy: {accuracy_test:.2f}')\n",
-    "print(f'Misclassification Rate: {1 - accuracy_test:.2f}')\n"
+    "print(f'Misclassification Rate: {1 - accuracy_test:.2f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Object `same` not found.\n"
+      "Exponentiated Coefficients: const     2.258522e-40\n",
+      "SAT       1.055779e+00\n",
+      "Gender    8.773478e+00\n",
+      "dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "Will the metrics calculated by the statsmodel and sklearn be the same?\n",
+    "# Exponentiate coefficients for interpretation\n",
+    "exp_coef = np.exp(results.params)\n",
+    "print(\"Exponentiated Coefficients:\", exp_coef)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Accuracy: 0.96\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute training accuracy\n",
+    "def compute_accuracy(actual, predicted):\n",
+    "    \"\"\"\n",
+    "    Compute accuracy given actual labels and predicted probabilities.\n",
+    "    \"\"\"\n",
+    "    bins = np.array([0, 0.5, 1])\n",
+    "    cm = np.histogram2d(actual, predicted, bins=bins)[0]\n",
+    "    accuracy = (cm[0, 0] + cm[1, 1]) / cm.sum()\n",
+    "    return cm, accuracy\n",
     "\n",
-    "```python\n",
+    "train_predictions = results.predict()\n",
+    "cm_train, accuracy_train = compute_accuracy(y_train, train_predictions)\n",
+    "print(f'Training Accuracy: {accuracy_train:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      "          Predicted 0  Predicted 1\n",
+      "Actual 0         14.0          2.0\n",
+      "Actual 1          2.0         16.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute confusion matrix and accuracy for test data\n",
+    "test_predictions = results.predict(X_test)\n",
+    "cm_test, accuracy_test = compute_accuracy(y_test, test_predictions)\n",
+    "\n",
+    "# Format and display confusion matrix\n",
+    "cm_df = pd.DataFrame(cm_test, columns=['Predicted 0', 'Predicted 1'], index=['Actual 0', 'Actual 1'])\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(cm_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.88\n",
+      "Misclassification Rate: 0.12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Display test accuracy and misclassification rate\n",
+    "print(f'Test Accuracy: {accuracy_test:.2f}')\n",
+    "print(f'Misclassification Rate: {1 - accuracy_test:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sklearn model metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Will the metrics calculated by statsmodel and sklearn be the same/similar?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import confusion_matrix, classification_report\n",
-    "\n",
+    "from sklearn.metrics import confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix (Sklearn):\n",
+      "[[14  2]\n",
+      " [ 2 16]]\n",
+      "Accuracy (Sklearn): 0.88\n",
+      "Misclassification Rate (Sklearn): 0.12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sklearn model fitting\n",
     "model = LogisticRegression()\n",
-    "model.fit(X_train, y_train)\n",
+    "model.fit(X_train[['const', 'SAT', 'Gender']], y_train)  # Don't pass 'const' as it is manually added.\n",
     "\n",
-    "y_pred = model.predict(X_test)\n",
+    "# Predictions\n",
+    "y_pred_prob = model.predict_proba(X_test[['const', 'SAT', 'Gender']])[:, 1]  # Probabilities for class 1\n",
+    "y_pred = (y_pred_prob >= 0.5).astype(int)  # Apply threshold to get predicted labels (0 or 1)\n",
     "\n",
-    "# Confusion matrix\n",
-    "print(confusion_matrix(y_test, y_pred))\n",
+    "# Compute confusion matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "print(\"Confusion Matrix (Sklearn):\")\n",
+    "print(cm)\n",
     "\n",
-    "# Classification report\n",
-    "print(classification_report(y_test, y_pred))\n",
-    "```"
+    "# Compute Accuracy manually (same as in your statsmodels code)\n",
+    "accuracy = (cm[0, 0] + cm[1, 1]) / cm.sum()\n",
+    "print(f'Accuracy (Sklearn): {accuracy:.2f}')\n",
+    "\n",
+    "# Misclassification rate\n",
+    "misclassification_rate = 1 - accuracy\n",
+    "print(f'Misclassification Rate (Sklearn): {misclassification_rate:.2f}')"
    ]
   }
  ],
