--- a/Explorations/Preprocess/PCA/PCA_Analysis.ipynb
+++ b/Explorations/Preprocess/PCA/PCA_Analysis.ipynb
@@ -27,6 +27,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[ ]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -6154,7 +6161,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "venv (3.12.5)",
    "language": "python",
    "name": "python3"
   },
@@ -6168,7 +6175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
